--- a/AppNameT1/res/layout/activity_end.xml
+++ b/AppNameT1/res/layout/activity_end.xml
@@ -6,10 +6,10 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="de.weg.wi1415.appnameT1.EndActivity" >
+    tools:context="de.weg.wi1415.appnameT1.view.EndActivity" >
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/AnredeText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hello_world" />
@@ -18,8 +18,8 @@
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView1"
-        android:layout_below="@+id/textView1"
+        android:layout_alignLeft="@+id/AnredeText"
+        android:layout_below="@+id/AnredeText"
         android:layout_marginTop="73dp"
         android:onClick="goBack"
         android:text="@string/ButtonBack" />
