--- a/AppNameT1/res/layout/activity_folge.xml
+++ b/AppNameT1/res/layout/activity_folge.xml
@@ -6,10 +6,10 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="de.weg.wi1415.appnameT1.FolgeActivity" >
+    tools:context="de.weg.wi1415.appnameT1.view.FolgeActivity" >
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/AnredeText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hello_world" />
@@ -20,8 +20,8 @@
        	style="@style/button_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView1"
-        android:layout_below="@+id/textView1"
+        android:layout_alignLeft="@+id/AnredeText"
+        android:layout_below="@+id/AnredeText"
         android:layout_marginTop="70dp"
         android:onClick="goBack"
         android:text="@string/ButtonBack"
@@ -39,5 +39,14 @@
         android:layout_marginRight="42dp"
         android:onClick="goForward"
         android:text="@string/ButtonForward" />
+
+            <ListView
+                android:id="@+id/listeDerNamen"
+                android:layout_width="216dp"
+                android:layout_height="332dp"
+                android:layout_alignLeft="@+id/AnredeText"
+                android:layout_below="@+id/button1"
+                tools:listitem="@android:layout/list_item_name" >
+            </ListView>
 
 </RelativeLayout>
