--- a/AufgabenApp/res/layout/activity_liste.xml
+++ b/AufgabenApp/res/layout/activity_liste.xml
@@ -4,7 +4,7 @@
     android:background="@drawable/gruen">
 
     <ListView
-        android:id="@+id/expandableListView1"
+        android:id="@+id/listeaufgabe"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
