--- a/PasswordApp1/res/layout/activity_account_erstellen.xml
+++ b/PasswordApp1/res/layout/activity_account_erstellen.xml
@@ -61,6 +61,7 @@
          android:layout_marginBottom="16dp"
          android:layout_marginRight="22dp"
          android:height="50dp"
+          android:onClick="goSpeichern"
          android:text="Speichern"
          android:width="110dp" />
 
