--- a/PasswordApp1/res/layout/activity_alle_accounts.xml
+++ b/PasswordApp1/res/layout/activity_alle_accounts.xml
@@ -15,10 +15,10 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:onClick="goBack"
-        android:text="Zurück" />
+        android:text="Hauptmenü" />
 
     <ExpandableListView
-        android:id="@+id/expandableListView1"
+        android:id="@+id/listeDerAccounts"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
